# letsdmmf

./: Cargo.toml  LICENSE  README.md
.github/: tap-release.yml
.github/workflows/: ci.yml  release.yml
examples/schema/: 1-1-multi-field.prisma  1-1-self.prisma  1-1.prisma  1-n-multi-field.prisma  1-n-self.prisma  1-n.prisma  m-n-explicit.prisma  m-n-implicit.prisma  m-n-self-explicit.prisma  m-n-self.prisma
src/: cli.rs  core.rs  dmmf.rs  example.rs  lib.rs  location.rs  main.rs  prisma.rs  validate.rs
src/dmmf/: mod.rs  types.rs
src/dmmf/snapshots/: letsdmmf__dmmf__tests__snapshot.snap
src/location/: mod.rs  validate.rs
src/snapshots/: letsdmmf__core__tests__snapshot.snap  letsdmmf__dmmf__tests__snapshot.snap
