[package]
name = "letsdmmf"
version = "0.2.3"
edition = "2021"

[dependencies]
datamodel = { git = "https://github.com/prisma/prisma-engines" }
request-handlers = { git = "https://github.com/prisma/prisma-engines" }
prisma-models = { git = "https://github.com/prisma/prisma-engines" }
query-core = { git = "https://github.com/prisma/prisma-engines" }
datamodel-connector = { git = "https://github.com/prisma/prisma-engines" }
clap = { version = "3.1.6", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
insta = "1.13.0"