[package]
name = "letsdmmf"
version = "0.2.4"
edition = "2021"
authors = ["yujonglee <yujonglee.dev@gmail.com>"]
license = "MIT"
description = "Traverse DMMF of Prisma schema, in your terminal"
readme = "README.md"
homepage = "https://github.com/yujong-lee/letsdmmf"
repository = "https://github.com/yujong-lee/letsdmmf"
keywords = ["prisma", "dmmf", "cli"]
categories = ["command-line-utilities"]

[dependencies]
datamodel = { git = "https://github.com/prisma/prisma-engines" }
request-handlers = { git = "https://github.com/prisma/prisma-engines" }
prisma-models = { git = "https://github.com/prisma/prisma-engines" }
query-core = { git = "https://github.com/prisma/prisma-engines" }
datamodel-connector = { git = "https://github.com/prisma/prisma-engines" }
clap = { version = "3.1.6", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
inquire = "0.2.1"
webbrowser = "0.6.0"

[dev-dependencies]
insta = "1.13.0"
