[package]
name = "letsdmmf"
version = "0.3.0"
edition = "2021"
authors = ["yujonglee <yujonglee.dev@gmail.com>"]
license = "MIT"
description = "Traverse DMMF of Prisma schema, in your terminal"
readme = "README.md"
homepage = "https://github.com/yujong-lee/letsdmmf"
repository = "https://github.com/yujong-lee/letsdmmf"
keywords = ["prisma", "dmmf", "cli"]
categories = ["command-line-utilities"]

[dependencies]
dmmf = { git = "https://github.com/tufan-io/prisma-engines/", rev = "334e6e55c230988126fc399427727d24a2172984"}
clap = { version = "3.1.6", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
inquire = "0.2.1"
webbrowser = "0.6.0"

[dev-dependencies]
insta = "1.13.0"
